# c-collections

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CMake_Build_and_Test.yml  ci.yml
include/: arrayList.h  arraylist.h  boolarray.h
src/: arrayList.c  arraylist.c  boolarray.c
tests/: test_arraylist.c  test_boolarray.c
